--- a/src/scss/partials/_document.scss
+++ b/src/scss/partials/_document.scss
@@ -137,6 +137,7 @@
 
     .document-download {
       background-color: rgba(0, 0, 0, .2);
+      border-radius: $border-radius;
     }
 
     .preloader-circular {
